--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -754,19 +754,19 @@ gas_metallicity_gas_carbon_over_oxygen_lom_50_kpc:
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017a.hdf5
 
-gas_metallicity_gas_carbon_over_oxygen_lofloor_50_kpc:
+gas_metallicity_gas_carbon_over_oxygen_total_lom_50_kpc:
   type: "scatter"
   legend_loc: "upper left"
   selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
-  comment: "All galaxies, LoM, Diffuse"
+  comment: "All galaxies, LoM, Total (Dust + Diffuse)"
   y:
-    quantity: "derived_quantities.gas_c_over_o_abundance_avglog_low_50_kpc"
+    quantity: "derived_quantities.gas_c_over_o_total_abundance_avglin_50_kpc"
     log: false
     units: "dimensionless"
     start: -2
     end: 1
   x:
-    quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
+    quantity: "derived_quantities.gas_o_abundance_avglin_50_kpc"
     log: false
     units: "dimensionless"
     start: 7
@@ -783,48 +783,13 @@ gas_metallicity_gas_carbon_over_oxygen_lofloor_50_kpc:
       value: 10
       units: "dimensionless"
   metadata:
-    title: "Diffuse Gas metallicity - Diffuse Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
-    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-4 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-4 x (C/O)sun and 1e-4 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
+    title: "Diffuse Gas metallicity - (Dust + Diffuse) Gas Carbon over Oxygen relation (log-of-mean, 50 kpc aperture, only cold dense gas)"
+    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). No minimum metallicity is imposed. All haloes are plotted, including subhaloes. This uses total gas metallicity for C/O, i.e. it includes metals that are present in dust.
     section: Gas Metallicity
     show_on_webpage: true
   observational_data:
     - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017a.hdf5
 
-gas_metallicity_gas_carbon_over_oxygen_hifloor_50_kpc:
-  type: "scatter"
-  legend_loc: "upper left"
-  selection_mask: "derived_quantities.has_cold_dense_gas_50_kpc"
-  comment: "All galaxies, LoM, Diffuse"
-  y:
-    quantity: "derived_quantities.gas_c_over_o_abundance_avglog_high_50_kpc"
-    log: false
-    units: "dimensionless"
-    start: -2
-    end: 1
-  x:
-    quantity: "derived_quantities.gas_o_abundance_avglog_high_50_kpc"
-    log: false
-    units: "dimensionless"
-    start: 7
-    end: 10
-  median:
-    plot: true
-    log: true
-    adaptive: true
-    number_of_bins: 30
-    start:
-      value: 7
-      units: "dimensionless"
-    end:
-      value: 10
-      units: "dimensionless"
-  metadata:
-    title: "Diffuse Gas metallicity - Diffuse Gas Carbon over Oxygen relation (mean-of-log, 50 kpc aperture)"
-    caption: Only shown for galaxies with cold, dense gas. Metallicity is represented by 12 + $\log_{10}$ O/H (where $\log_{10}$ O/H is averaged between gas particles with a [O/H]=-3 floor for diffuse O) of the cold, dense gas ($T < 10^{4.5}\;{\rm K}$,  $n_{\rm H} > 0.1 \; {\rm cm^{-3}}$). The floor values are set to 1e-3 x (C/O)sun and 1e-3 x (O/H)sun. All haloes are plotted, including subhaloes. This uses depleted gas metallicity, i.e. it does not include metals that are present in dust.
-    section: Gas Metallicity
-    show_on_webpage: true
-  observational_data:
-    - filename: GalaxyStellarMassGasMetallicity/Nicholls_2017a.hdf5
 
 stellar_mass_star_metallicity_50:
   type: "scatter"
