--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -362,6 +362,24 @@ scripts:
       yvar: C_Fe
       dataset: APOGEE
   - filename: scripts/stellar_abundances.py
+    caption: '[Fe/H] vs [C/O] using Asplund et al. (2009) values for [O/H]Sun = 8.69 and [C/H]Sun = 8.43. The median [C/O] vs median [Fe/H] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018) and AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b). We create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size.'
+    output_file: stellar_abundances_FeH_CO_APOGEE.png
+    section: Stellar Metal Abundances
+    title: '[Fe/H] vs [C/O]'
+    additional_arguments:
+      xvar: Fe_H
+      yvar: C_O
+      dataset: APOGEE
+  - filename: scripts/stellar_abundances.py
+    caption: '[O/H] vs [C/O] using Asplund et al. (2009) values for [O/H]Sun = 8.69 and [C/H]Sun = 8.43. The median [C/O] vs median [O/H] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018) and AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b). We create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size.'
+    output_file: stellar_abundances_OH_CO_APOGEE.png
+    section: Stellar Metal Abundances
+    title: '[O/H] vs [C/O]'
+    additional_arguments:
+      xvar: O_H
+      yvar: C_O
+      dataset: APOGEE
+  - filename: scripts/stellar_abundances.py
     caption: '[Fe/H] vs [N/Fe] using Asplund et al. (2009) values for [Fe/H]Sun = 7.5 and [N/H]Sun = 7.83. The median [N/Fe] vs median [Fe/H] is indicated by the solid curve(s). The scatter points show abundances of individual stellar particles. The observational data for MW compiles the data from the APOGEE survey (Holtzman et al. 2018) and AstroNN added-value catalog (Leung, H.W. & Bovy, Jo 2019b). We create 6 stellar distributions by selecting stars from APOGEE based on galactocentric radial & azimuthal cuts, and combine them in order to derive a joint stellar abundance distribution that gives less weight to stars in the solar vicinity. The resulting contours use a log scale with 0.2 bin size.'
     output_file: stellar_abundances_FeH_NFe_APOGEE.png
     section: Stellar Metal Abundances
