Add new data to metallicity plots

--- a/colibre/auto_plotter/metallicity.yml
+++ b/colibre/auto_plotter/metallicity.yml
@@ -39,6 +39,12 @@ stellar_mass_gas_sf_metallicity_fromz_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_fromz_lom_50:
   type: "scatter"
@@ -81,6 +87,12 @@ stellar_mass_gas_sf_metallicity_fromz_lom_50:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_30:
   type: "scatter"
@@ -123,6 +135,12 @@ stellar_mass_gas_sf_metallicity_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_50:
   type: "scatter"
@@ -165,6 +183,12 @@ stellar_mass_gas_sf_metallicity_lom_50:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_total_lom_30:
   type: "scatter"
@@ -207,6 +231,12 @@ stellar_mass_gas_sf_metallicity_total_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_total_lom_50:
   type: "scatter"
@@ -249,6 +279,12 @@ stellar_mass_gas_sf_metallicity_total_lom_50:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
   type: "scatter"
@@ -291,6 +327,12 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_lowfloor_50:
   type: "scatter"
@@ -333,6 +375,12 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_50:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_hifloor_30:
   type: "scatter"
@@ -375,6 +423,12 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_30:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_hifloor_50:
   type: "scatter"
@@ -417,6 +471,12 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_50:
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Curti2020.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Lewis2023.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_allgals_30:
   type: "scatter"
@@ -457,6 +517,12 @@ stellar_mass_gas_sf_metallicity_lom_allgals_30:
     - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
     - filename: GalaxyStellarMassGasMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_allgals_50:
   type: "scatter"
@@ -497,6 +563,12 @@ stellar_mass_gas_sf_metallicity_lom_allgals_50:
     - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
     - filename: GalaxyStellarMassGasMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Strom2022_OH.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z2.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Sanders2021_z3.3.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_Ne3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3HB.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_O3O2.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Pharo2023_R23.hdf5
 
 stellar_mass_star_metallicity_50:
   type: "scatter"
@@ -539,6 +611,7 @@ stellar_mass_star_metallicity_50:
     - filename: GalaxyStellarMassStellarMetallicity/Zahid2017_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kudritzki2016_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Yates2021_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Chartab2023.hdf5
 
 
 stellar_mass_star_metallicity_30:
@@ -582,6 +655,7 @@ stellar_mass_star_metallicity_30:
     - filename: GalaxyStellarMassStellarMetallicity/Zahid2017_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kudritzki2016_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Yates2021_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Chartab2023.hdf5
 
 
 stellar_mass_star_fe_over_h_lom_50:
@@ -625,6 +699,7 @@ stellar_mass_star_fe_over_h_lom_50:
     - filename: GalaxyStellarMassStellarMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Strom2022_FeH.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Yates2021_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Chartab2023.hdf5
 
 
 stellar_mass_star_fe_snia_over_h_lom_50:
@@ -667,6 +742,7 @@ stellar_mass_star_fe_snia_over_h_lom_50:
     - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Strom2022_FeH.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Chartab2023.hdf5
 
 
 stellar_mass_star_fe_over_h_mol_lofloor_50:
@@ -709,6 +785,7 @@ stellar_mass_star_fe_over_h_mol_lofloor_50:
     - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Strom2022_FeH.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Chartab2023.hdf5
 
 
 stellar_mass_star_fe_over_h_mol_hifloor_50:
@@ -751,6 +828,7 @@ stellar_mass_star_fe_over_h_mol_hifloor_50:
     - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/FIREbox.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Strom2022_FeH.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Chartab2023.hdf5
 
 
 stellar_mass_star_mg_over_fe_50:
